added contact-me + fixed 320px responsiveness

--- a/Project/css/custom.css
+++ b/Project/css/custom.css
@@ -33,3 +33,9 @@
         width: 18rem;
     }
 }
+
+@media only screen and (max-width: 320px) {
+    .card-sizing {
+        width: 16rem;
+    }
+}
