--- a/Project/css/custom.css
+++ b/Project/css/custom.css
@@ -2,8 +2,16 @@
     margin: 4rem 0;
 }
 
+footer {
+    background-color: #f8f9fa;
+}
+
 #hidden-card {
     display: none;
+}
+
+.card {
+    border-radius: 6px;
 }
 
 .card-body>img {
