--- a/Project/css/custom.css
+++ b/Project/css/custom.css
@@ -19,6 +19,11 @@ body {
     height: 100px;
 }
 
+.weekly-icon {
+    width: 100px;
+    height: 100px;
+}
+
 /* per darkmode */
 .custom-alert {
     background-color: rgb(255, 193, 7, 1);
@@ -66,6 +71,10 @@ body {
 
 #today-card {
     height: 250px;
+}
+
+h6 {
+    font-weight: bold;
 }
 
 .container-chart {
