fixed weekly image and date

--- a/Project/css/custom.css
+++ b/Project/css/custom.css
@@ -24,6 +24,10 @@ body {
     height: 100px;
 }
 
+p {
+    white-space: pre;
+}
+
 /* per darkmode */
 .custom-alert {
     background-color: rgb(255, 193, 7, 1);
