--- a/Project/css/custom.css
+++ b/Project/css/custom.css
@@ -87,6 +87,28 @@ h6 {
     font-weight: bold;
 }
 
+.suggestion-elements {
+    border-style: solid;
+    border-width: 1px;
+    border-color: white grey grey grey;
+    border-bottom-right-radius: 10px;
+    border-bottom-left-radius: 10px;
+    display: none;
+}
+
+.suggestion-elements li {
+    list-style-type: none;
+    list-style-position: inside;
+    margin: 0;
+    padding-left: 12px;
+    padding-top: 4px;
+    padding-bottom: 4px;
+}
+
+.suggestion-elements li:hover {
+    background-color: red;
+}
+
 .container-chart {
     height: 60vh;
     width: 80vw;
