--- a/Project/node/views/weather.html
+++ b/Project/node/views/weather.html
@@ -130,7 +130,7 @@
 
                 <div id="today-card" class="card text-center shadow my-5">
                     <div class="card-header">
-                        <h4 class="my-0 f2-normal">Meteo di Oggi (ogni ora)</h4>
+                        <h4 class="my-0 f2-normal">Meteo Orario (24 ore)</h4>
                     </div>
                     <div id="today-weather" class="row-col pt-4 ms-3 me-1 mb-1">
                     </div>
