--- a/Project/node/views/index.html
+++ b/Project/node/views/index.html
@@ -109,7 +109,7 @@
                         <p class="card-text">data</p>
                         <img src="images/missing_image.png" alt="missing image" class="card-img-top">
                         <h5 class="card-title">meteo</h5>
-                        <div id="alert" class="badge rounded-pill text-dark"></div>
+                        <div id="alert" class="badge rounded-pill custom-alert text-dark"></div>
                         <ul class="list-group list-group-flush">
                             <li class="list-group-item">Umidità: </li>
                             <li class="list-group-item">Pressione: </li>
