--- a/Project/node/views/weather.html
+++ b/Project/node/views/weather.html
@@ -96,7 +96,7 @@
                     <label for="floatingInput">es. Milano, IT</label>
                 </div>
                 <button id="searchBtn" type="button" class="btn btn-outline-primary flex-shrink-0"
-                    onclick="suggestion()">search</button>
+                    onclick="suggestion('weeklySuggestion')">search</button>
                 <button type="button" class="btn btn-outline-secondary flex-shrink-0" onclick="getLocation()"><img
                         src="images/location.png" alt="posizione"></button>
             </div>
