--- a/Project/node/views/index.html
+++ b/Project/node/views/index.html
@@ -138,7 +138,7 @@
                                 <li class="list-group-item">Pressione: </li>
                                 <li class="list-group-item">Vento: </li>
                             </ul>
-                            <a href="weather.html" onclick="saveCity('Milano, IT')"
+                            <a href="weather.html" onclick="saveCity('Milano, IT : Lombardy')"
                                 class="btn btn-primary stretched-link">Previsioni Settimanali</a>
                         </div>
                     </div>
@@ -158,7 +158,7 @@
                                 <li class="list-group-item">Pressione: </li>
                                 <li class="list-group-item">Vento: </li>
                             </ul>
-                            <a href="weather.html" onclick="saveCity('Londra, GB')"
+                            <a href="weather.html" onclick="saveCity('Londra, GB : England')"
                                 class="btn btn-primary stretched-link">Previsioni Settimanali</a>
                         </div>
                     </div>
@@ -198,7 +198,7 @@
                                 <li class="list-group-item">Pressione: </li>
                                 <li class="list-group-item">Vento: </li>
                             </ul>
-                            <a href="weather.html" onclick="saveCity('New York, US')"
+                            <a href="weather.html" onclick="saveCity('New York, US : New York')"
                                 class="btn btn-primary stretched-link">Previsioni Settimanali</a>
                         </div>
                     </div>
