added nodemailer for contact me support

--- a/Project/node/views/index.html
+++ b/Project/node/views/index.html
@@ -232,7 +232,7 @@
                         </div>
 
                         <div class="form-group pt-4">
-                            <button type="submit" class="btn-primary rounded">invia</button>
+                            <button type="submit" class="btn-primary rounded" id="btnContactMe">invia</button>
                         </div>
                     </div>
                 </form>
