--- a/Project/node/views/weather.html
+++ b/Project/node/views/weather.html
@@ -437,9 +437,9 @@
 
     <!-- FOOTER -->
     <footer class="footer p-3 mt-auto border-top bg-light">
-        <p class="float-end"><a href="#">Privacy</a> &middot; <a href="#">Terms</a> &middot; <a href="#">Back to top</a>
+        <p class="float-end">Corso di Programmazione Web &middot; <a href="#">Back to top</a>
         </p>
-        <p>&copy; 2022-2022 Carniselli Davide - Unimi Informatica </p>
+        <p>&copy; 2022-2022 &middot; Carniselli Davide - Unimi Informatica </p>
     </footer>
 
     <script src="js/weather.js"></script>
