--- a/Project/node/views/index.html
+++ b/Project/node/views/index.html
@@ -39,7 +39,7 @@
             }
         }
     </script>
-    
+
     <title>Progetto Meteo Live</title>
 </head>
 
@@ -247,9 +247,9 @@
 
     <!-- FOOTER -->
     <footer class="footer p-3 mt-auto border-top bg-light">
-        <p class="float-end"><a href="#">Privacy</a> &middot; <a href="#">Terms</a> &middot; <a href="#">Back to top</a>
+        <p class="float-end">Corso di Programmazione Web &middot; <a href="#">Back to top</a>
         </p>
-        <p>&copy; 2022-2022 Carniselli Davide - Unimi Informatica </p>
+        <p>&copy; 2022-2022 &middot; Carniselli Davide - Unimi Informatica </p>
     </footer>
 
     <script src="js/index.js"></script>
